--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </header>
   <main>
     <div class="card">
-      <img src="img/bg-batman.png" alt="Baticueva" class="card-banner">
-      <img src="img/img-batman.png" alt="Batman" class="card-profile">
-      <img src="img/heart.png" alt="Corazón" class="card-heart">
+      <img src="./img/bg-batman.png" alt="Baticueva" class="card-banner">
+      <img src="./img/img-batman.png" alt="Batman" class="card-profile">
+      <img src="./img/heart.png" alt="Corazón" class="card-heart">
       <div class="content">
         <div class="text">
           <h2>BATMAN</h2>
@@ -31,9 +31,9 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/bg-harley.png" alt="Background Harley" class="card-banner">
-      <img src="img/img-harley.png" alt="Harley Quinn" class="card-profile">
-      <img src="img/heart.png" alt="Corazón" class="card-heart">
+      <img src="./img/bg-harley.png" alt="Background Harley" class="card-banner">
+      <img src="./img/img-harley.png" alt="Harley Quinn" class="card-profile">
+      <img src="./img/heart.png" alt="Corazón" class="card-heart">
       <div class="content">
         <div class="text">
           <h2>Harley Quinn</h2>
@@ -43,9 +43,9 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/bg-batman.png" alt="Baticueva" class="card-banner">
-      <img src="img/img-batman.png" alt="Batman" class="card-profile">
-      <img src="img/heart.png" alt="Corazón" class="card-heart">
+      <img src="./img/bg-batman.png" alt="Baticueva" class="card-banner">
+      <img src="./img/img-batman.png" alt="Batman" class="card-profile">
+      <img src="./img/heart.png" alt="Corazón" class="card-heart">
       <div class="content">
         <div class="text">
           <h2>BATMAN</h2>
