--- a/index.html
+++ b/index.html
@@ -19,39 +19,42 @@
   </header>
   <main>
     <div class="card">
-      <img src="./img/bg-batman.png" alt="Baticueva" class="card-banner">
-      <img src="./img/img-batman.png" alt="Batman" class="card-profile">
-      <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      <div class="banner-batman">
+        <img src="./img/img-batman.png" alt="Batman" class="card-profile">
+        <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      </div>
       <div class="content">
-        <div class="text">
-          <h2>BATMAN</h2>
-          <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+        <h2>BATMAN</h2>
+        <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+        <div>
+          <button>Ver más</button>
         </div>
-        <button>Ver más</button>
       </div>
     </div>
     <div class="card">
-      <img src="./img/bg-harley.png" alt="Background Harley" class="card-banner">
-      <img src="./img/img-harley.png" alt="Harley Quinn" class="card-profile">
-      <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      <div class="banner-harley">
+        <img src="./img/img-harley.png" alt="Harley Quinn" class="card-profile">
+        <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      </div>
       <div class="content">
-        <div class="text">
-          <h2>Harley Quinn</h2>
-          <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
+        <h2>Harley Quinn</h2>
+        <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
+        <div>
+          <button>Ver más</button>
         </div>
-        <button>Ver más</button>
       </div>
     </div>
     <div class="card">
-      <img src="./img/bg-batman.png" alt="Baticueva" class="card-banner">
-      <img src="./img/img-batman.png" alt="Batman" class="card-profile">
-      <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      <div class="banner-batman">
+        <img src="./img/img-batman.png" alt="Batman" class="card-profile">
+        <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      </div>
       <div class="content">
-        <div class="text">
-          <h2>BATMAN</h2>
-          <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+        <h2>BATMAN</h2>
+        <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+        <div>
+          <button>Ver más</button>
         </div>
-        <button>Ver más</button>
       </div>
     </div>
   </main>
