--- a/index.html
+++ b/index.html
@@ -14,8 +14,38 @@
   </div>
   <header>
     <div class="header-bar">
+      <nav role="navigation">
+        <div id="menuToggle">
+          <!--
+          A fake / hidden checkbox is used as click reciever,
+          so you can use the :checked selector on it.
+          -->
+          <input type="checkbox" />
+
+          <!--
+          Some spans to act as a hamburger.
+
+          They are acting like a real hamburger,
+          not that McDonalds stuff.
+          -->
+          <span></span>
+          <span></span>
+          <span></span>
+
+          <!--
+          Too bad the menu has to be inside of the button
+          but hey, it's pure CSS magic.
+          -->
+          <ul id="menu">
+            <a href="#"><li>Home</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Info</li></a>
+            <a href="#"><li>Contact</li></a>
+            <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+          </ul>
+        </div>
+      </nav>
       <h1>Heroes</h1>
-    </div>
   </header>
   <main>
     <div class="card">
@@ -32,6 +62,32 @@
       </div>
     </div>
     <div class="card">
+      <div class="banner-maravilla">
+        <img src="./img/img-maravilla.png" alt="Mujer Maravilla" class="card-profile">
+        <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      </div>
+      <div class="content">
+        <h2>MUJER MARAVILLA</h2>
+        <p>Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología griega. En su tierra natal es conocida como la princesa Diana de Temiscira pero fuera de esta utiliza la identidad secreta de Diana Prince.</p>
+        <div>
+          <button>Ver más</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="banner-superman">
+        <img src="./img/img-superman.png" alt="Superman" class="card-profile">
+        <img src="./img/heart.png" alt="Corazón" class="card-heart">
+      </div>
+      <div class="content">
+        <h2>SUPERMAN</h2>
+        <p>Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC Comics. ​El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio.</p>
+        <div>
+          <button>Ver más</button>
+        </div>
+      </div>
+    </div>
+    <div class="card harley">
       <div class="banner-harley">
         <img src="./img/img-harley.png" alt="Harley Quinn" class="card-profile">
         <img src="./img/heart.png" alt="Corazón" class="card-heart">
@@ -39,19 +95,6 @@
       <div class="content">
         <h2>Harley Quinn</h2>
         <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada</p>
-        <div>
-          <button>Ver más</button>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="banner-batman">
-        <img src="./img/img-batman.png" alt="Batman" class="card-profile">
-        <img src="./img/heart.png" alt="Corazón" class="card-heart">
-      </div>
-      <div class="content">
-        <h2>BATMAN</h2>
-        <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
         <div>
           <button>Ver más</button>
         </div>
