--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
           </ul>
         </div>
       </nav>
-      <h1>Heroes</h1>
+      <h1><a href="./index.html" class="heroes">Heroes</a></h1>
   </header>
+  <nav class="new-nav">
+    <ul class="new-ul">
+      <li><a href="./contacto.html">Contacto</a></li>
+      <li><a href="#">Registrarme</a></li>
+      <li><a href="#">Ingresar</a></li>
+    </ul>
+  </nav>
   <main>
     <div class="card">
       <div class="banner-batman">
