--- a/contacto.html
+++ b/contacto.html
@@ -89,30 +89,30 @@
           <div class="checks">
             <label>Poderes</label>
             <div class="checkbox">
-              <input type="checkbox" id="volar" value="volar" name="volar">
+              <input type="checkbox" class="colored-checkbox" id="volar" value="volar" name="volar">
               <label for="volar">Volar</label>
             </div>
             <div class="checkbox">
-              <input type="checkbox" id="superinteligencia" value="superinteligencia" name="superinteligencia">
+              <input type="checkbox" class="colored-checkbox" id="superinteligencia" value="superinteligencia" name="superinteligencia">
               <label for="superinteligencia">Superinteligencia</label>
             </div>
             <div class="checkbox">
-              <input type="checkbox" id="rayos_laser" value="rayos_laser" name="rayos_laser">
+              <input type="checkbox" class="colored-checkbox" id="rayos_laser" value="rayos_laser" name="rayos_laser">
               <label for="rayos_laser">Vista de rayos láser</label>
             </div>
             <div class="checkbox">
-              <input type="checkbox" id="billetera_gorda" value="billetera_gorda" name="billetera_gorda">
+              <input type="checkbox" class="colored-checkbox" id="billetera_gorda" value="billetera_gorda" name="billetera_gorda">
               <label for="billetera_gorda">Billetera Gorda</label>
             </div>
           </div>
           <hr>
           <div class="checks">
-            <div class="checkbox">
-              <input type="radio" id="heroe" value="Héroe / Heroína" name="heroe">
+            <div class="radios">
+              <input type="radio" class="colored-radio" id="heroe" value="Héroe / Heroína" name="heroe">
               <label for="heroe">Héroe / Heroína</label>
             </div>
-            <div class="checkbox">
-              <input type="radio" id="villano" value="Villano / Villana" name="heroe">
+            <div class="radios">
+              <input type="radio" class="colored-radio" id="villano" value="Villano / Villana" name="heroe">
               <label for="villano">Villano / Villana</label>
             </div>
           </div>
