--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     </ul>
   </nav>
   <main>
+    <div class="plus">
+      +
+    </div>
     <div class="card">
       <div class="banner-batman">
         <img src="./img/img-batman.png" alt="Batman" class="card-profile">
